# final_challenge

./: .gitignore  README.md  package.xml  setup.py
config/part_a/: homography_matrix.txt  lane_follower.yaml  lane_hugging.yaml
config/part_b/: params.yaml
final_challenge/: README.md  setup.cfg  setup.py
final_challenge/config/part_b/: params.yaml
final_challenge/csvs-alicia/: Help_1.csv  Help_2.csv  Help_3.csv  Meter_2.csv  Meter_3.csv  Meter_4.csv  Meter_5.csv
final_challenge/data_viz/: bags_to_csv.py  viz.ipynb
final_challenge/final_challenge/part_a/: homography_utils.py  lane_detector.py
final_challenge/part a csvs/: curve1.csv  curve2.csv  curve3.csv  straight1.csv  straight2.csv  straight3.csv
final_challenge/part_a/: homography.py  lane_detector.py  lane_follower.py  lane_hugging.py  lane_pipeline.py  offline_lane_pipeline.py
final_challenge/part_b/: astar_planner.py  homography_transform.py  map_inflator.py  motion_model.py  node_temp.py  params.yaml  parking_controller.py  particle_filter.py  sensor_model.py  state_machine.py  trajectory_builder.py  trajectory_follower.py  trajectory_loader.py  yolo_annotator.py
launch/part_a/: lane_hugging.launch.xml  snail_race.launch.xml
launch/part_b/: boat_race.launch.xml
state_msgs/: CMakeLists.txt  package.xml
state_msgs/msg/: State.msg
vis_msgs/: CMakeLists.txt  package.xml
vis_msgs/msg/: Bounding.msg  ObjectLocationArray.msg  ObjectLocationPixel.msg
vs_msgs/: package.xml
vs_msgs/msg/: ObjectLocation.msg  ObjectLocationArray.msg  ObjectLocationPixelArray.msg
(+32 files in other folders)
