<?xml version="1.0"?>
<package format="3">
    <name>final_challenge</name>
    <version>0.0.0</version>
    <description>RSS 2026 Final Challenge: Part A (Great Snail Race / lane following) and Part B (Mrs. Puff's Boating School)</description>

    <maintainer email="todo@todo.todo">team</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <build_depend>racecar_simulator</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>ackermann_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>tf2_sensor_msgs</build_depend>
    <build_depend>tf_transformations</build_depend>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>ackermann_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>
    <exec_depend>tf2_sensor_msgs</exec_depend>
    <exec_depend>tf_transformations</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
